# fqt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yaml
FastQuantileTransformer/: __init__.py  interpolate.py  transformer.py  utils.py
examples/: benchmarks.ipynb  noise_policy.ipynb
fast_qt/: __init__.py  interpolate.py  transformer.py
fqt/: __init__.py  transformer.py  utils.py
tests/: context.py  test_advanced.py  test_original.py  test_stress.py
