[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fqt"
description = "Fast Quantile Transformer"
version = "0.0.1.dev0"
license = { file = "LICENSE" }
readme = "README.md"
# repository = "https://github.com/vaaven/fqt/"
dependencies = [
    "scikit_learn>=1.5.2",
    "torch"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.4"
]